feat(Projekt-x): Add paint page via editor.js
- install sass-embedded; dependency for js-draw
- Added TODO.md

--- a/css/home.css
+++ b/css/home.css
@@ -7,12 +7,10 @@ body {
 }
 
 .main {
-    width: 50%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+
     padding: 20px;
 
     background-color: rgba(0, 0, 0);
@@ -35,7 +33,7 @@ body {
 
 .intro-message p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 16px;
+    font-size: 20px;
     color: #F4E4CA;
 }
 
@@ -54,3 +52,37 @@ body {
     border: #FF5F1F;
     border-style: ridge;
 }
+
+/* Extra small devices (phones, 600px and down) */
+/* @media only screen and (max-width: 600px) {
+
+} */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+/* @media only screen and (min-width: 600px) {
+
+} */
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .main {
+        width: 50%;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        padding: 20px;
+
+        background-color: rgba(0, 0, 0);
+        border-radius: 25px;
+
+        line-height: 1.5;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+/* @media only screen and (min-width: 992px) {...} */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* @media only screen and (min-width: 1200px) {...} */
