feat(Projekt-X): Add contact, terms pages
Additionally:
- Improve the styling of the home page
- Add a TODO.MD with checklist of items for implementation.
- Remove unused import from editor.ts
- Standardize styling across the pages.

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,8 @@
 body {
     background-image: url(../assets/images/berenice-melis-cNKnDxNZ35I-unsplash.jpg);
-    background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-size: cover;
+    background-position: center bottom;
     background-color: black;
+    background-attachment: fixed;
 }
