fix(Projekt-x): Uploaded images on admin page
- Modify the admin route in server.js
- Uploaded images are now displayed on the admin page and can be approved/denied.
- Move .html pages to project root and update their scripts paths.
- Seems there was a conflict with the files in the docs folder and the running fo the server. Moved docs out.

--- a/server/views/admin.ejs
+++ b/server/views/admin.ejs
@@ -12,12 +12,13 @@
 </head>
 <body>
     <h1>Pending Images for Moderation</h1>
+    <p>ID: <%= pendingImages.length %></p>
     <% if (pendingImages && pendingImages.length > 0) { %>
         <% pendingImages.forEach(image => { %>
             <div class="image-pending" id="image-<%= image.id %>">
                 <p>ID: <%= image.id %></p>
                 <p>Filename: <%= image.filename %></p>
-                <object type="image/svg+xml" data="/data/staging/<%= image.staging_path.replace(/\\/g, '/') %>" width="200" height="200">
+                <object type="image/svg+xml" data="<%= image.staging_path.replace(/\\/g, '/') %>" width="200" height="200">
                     Your browser does not support SVGs.
                 </object>
                 <div class="actions">
